--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div class="logo">
             <a href="#"><img src="img/bookcoalogo.png" alt=""></a>
         </div>
+
+        <div class="space"></div>
+
+        <div class="count"></div>
     </div>
 
 
