--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/common.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <div class="top">
@@ -24,12 +24,114 @@
             <a href="#"><img src="img/bookcoalogo.png" alt=""></a>
         </div>
 
-        <div class="space"></div>
+        <div class="space">
+           <div class="space1">
+               <div class="down">
+                   <a href="#">도서명</a>
+                   <a href="#"><img src="img/down.png" alt=""></a>
+               </div>
+               <div class="input">
+                   <input type="text">
+               </div>
+               <div class="glass">
+                   <a href="#"><img src="img/glass.png" alt=""></a>
+               </div>
+           </div>
+        </div>
 
-        <div class="count"></div>
+        <div class="count">
+            <div class="count1">
+                <div class="count2">
+                    전체 등록된 책 <br>
+                    어제 등록된 책 <br>
+                    회원수 <br>
+                    판매자수
+                </div>
+                <div class="count3">
+                    13,711,187권 <br>
+                    3,048권<br>
+                    1,130,789명<br>
+                    76,315명
+                </div>
+            </div>
+        </div>
     </div>
-
-
-
+    <hr>
+    <div class="menubar">
+        <div class="menu">
+            <ul class="menu1">
+                <a href="#">전체분류보기</a>
+            </ul>
+            <ul class="menu2">
+                <li><a href="#">도서정보</a></li>
+            </ul>
+            <ul class="menu3">
+                <li><a href="#">도서등록</a></li>
+                <li><a href="#">파워북샵</a></li>
+                <li><a href="#">마이북샵</a></li>
+                <li><a href="#">마이페이지</a></li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <div class="menuall">
+        <ul class="menuall1">
+            <li>
+                <div class="menu1-1">
+                    <ul>
+                        <li><a href="#">실시간 등록도서</a></li>
+                        <li><a href="#">고등학교서적</a></li>
+                        <li><a href="#">수험서,자격증,취업</a></li>
+                        <li><a href="#">외국도서,원서</a></li>
+                        <li><a href="#">잡지</a></li>
+                        <li><a href="#">총류,사전,전집</a></li>
+                    </ul>
+                </div>
+                <div class="menu1-2">
+                    <ul>
+                        <li><a href="#">소설</a></li>
+                        <li><a href="#">중학교서적</a></li>
+                        <li><a href="#">종교</a></li>
+                        <li><a href="#">컴퓨터</a></li>
+                        <li><a href="#">취미</a></li>
+                        <li><a href="#">역사,문화</a></li>
+                    </ul>
+                </div>
+                <div class="menu1-3">
+                    <ul>
+                        <li><a href="#">문학,인물</a></li>
+                        <li><a href="#">대학전공서적</a></li>
+                        <li><a href="#">경영,경제</a></li>
+                        <li><a href="#">전문서적</a></li>
+                        <li><a href="#">만화</a></li>
+                        <li><a href="#">청소년</a></li>
+                    </ul>
+                </div>
+                <div class="menu1-4">
+                    <ul>
+                        <li><a href="#">아동,초등</a></li>
+                        <li><a href="#">역사,철학,심리,교육</a></li>
+                        <li><a href="#">자기계발</a></li>
+                        <li><a href="#">사전,전집</a></li>
+                        <li><a href="#">영화,음반</a></li>
+                        <li><a href="#">성인</a></li>
+                    </ul>
+                </div>
+                <div class="menu1-5">
+                    <ul>
+                        <li><a href="#">유아</a></li>
+                        <li><a href="#">사회,정치,법,과학</a></li>
+                        <li><a href="#">외국어</a></li>
+                        <li><a href="#">고서,희귀본</a></li>
+                        <li><a href="#">가정,건강</a></li>
+                        <li><a href="#">기타</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <script>
+        $
+    </script>
 </body>
 </html>
