--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="menubar">
         <div class="menu">
             <ul class="menu1">
-                <a href="#">전체분류보기</a>
+                <a class="meall" href="#">전체분류보기</a>
             </ul>
             <ul class="menu2">
                 <li><a href="#">도서정보</a></li>
@@ -130,8 +130,6 @@
             </li>
         </ul>
     </div>
-    <script>
-        $
-    </script>
+    <script src="js/common.js"></script>
 </body>
 </html>
