--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
             </li>
         </ul>
     </div>
+
+    <div class="slide">
+        
+    </div>
+
     <script src="js/common.js"></script>
 </body>
 </html>
