--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -132,9 +133,15 @@
     </div>
 
     <div class="slide">
-        
+        <ul>
+            <li><a href="#"><img src="img/slide1.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/slide2.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/slide3.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/slide4.jpg" alt=""></a></li>
+        </ul>
     </div>
 
     <script src="js/common.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
