--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             <li><a href="#"><img src="img/slide4.jpg" alt=""></a></li>
         </ul>
     </div>
+    <img src="" alt="" class="left">
+    <img src="" alt="" class="right">
 
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>
