--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
             <li><a href="#"><img src="img/slide3.jpg" alt=""></a></li>
             <li><a href="#"><img src="img/slide4.jpg" alt=""></a></li>
         </ul>
+        <img src="img/48-px-left.png" alt="" class="left">
+        <img src="img/48-px-right.png" alt="" class="right">
     </div>
-    <img src="" alt="" class="left">
-    <img src="" alt="" class="right">
+    
 
     <script src="js/common.js"></script>
     <script src="js/main.js"></script>
