--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="slide">
-        <ul>
+        <ul class="slide_img">
             <li><a href="#"><img src="img/slide1.jpg" alt=""></a></li>
             <li><a href="#"><img src="img/slide2.jpg" alt=""></a></li>
             <li><a href="#"><img src="img/slide3.jpg" alt=""></a></li>
