--- a/sub.html
+++ b/sub.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/common.css">
-    
+    <link rel="stylesheet" href="css/sub.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -135,8 +135,22 @@
     
 
 
+    <div class="title">
+        <p>내일(기욤 뮈소 장편소설)</p>
+        <ul>
+            <li>저자 기욤 뮈소</li>
+            <li class="line"></li>
+            <li>출판사 밝은세상</li>
+            <li class="line"></li>
+            <li>출간일 2013.12.10</li>
+            <li class="line"></li>
+            <li>상품등록일 2021.09.06</li>
+        </ul>
+    </div>
 
+    <div class="section1">
 
+    </div>
 
 
 
