--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 <body>
     <div class="top">
         <ul>
-            <li><a class="toptxt" href="#">로그인</a></li>
-            <li><a class="toptxt" href="#">회원가입</a></li>
-            <li><a class="toptxt" href="#">고객센터</a></li>
-            <li><a class="toptxt" href="#">마이페이지</a></li>
-            <li><a class="toptxt" href="#">장바구니</a></li>
+            <li><a class="toptxt" href="sub.html">로그인</a></li>
+            <li><a class="toptxt" href="sub.html">회원가입</a></li>
+            <li><a class="toptxt" href="sub.html">고객센터</a></li>
+            <li><a class="toptxt" href="sub.html">마이페이지</a></li>
+            <li><a class="toptxt" href="sub.html">장바구니</a></li>
         </ul>
     </div>
 
     <div class="search">
         <div class="logo">
-            <a href="#"><img src="img/bookcoalogo.png" alt=""></a>
+            <a href="sub.html"><img src="img/bookcoalogo.png" alt=""></a>
         </div>
 
         <div class="space">
            <div class="space1">
                <div class="down">
-                   <a href="#">도서명</a>
-                   <a href="#"><img src="img/down.png" alt=""></a>
+                   <a href="sub.html">도서명</a>
+                   <a href="sub.html"><img src="img/down.png" alt=""></a>
                </div>
                <div class="input">
                    <input type="text">
                </div>
                <div class="glass">
-                   <a href="#"><img src="img/glass.png" alt=""></a>
+                   <a href="sub.html"><img src="img/glass.png" alt=""></a>
                </div>
            </div>
         </div>
@@ -61,16 +61,16 @@
     <div class="menubar">
         <div class="menu">
             <ul class="menu1">
-                <a class="meall" href="#">전체분류보기</a>
+                <a class="meall" href="sub.html">전체분류보기</a>
             </ul>
             <ul class="menu2">
-                <li><a href="#">도서정보</a></li>
+                <li><a href="sub.html">도서정보</a></li>
             </ul>
             <ul class="menu3">
-                <li><a href="#">도서등록</a></li>
-                <li><a href="#">파워북샵</a></li>
-                <li><a href="#">마이북샵</a></li>
-                <li><a href="#">마이페이지</a></li>
+                <li><a href="sub.html">도서등록</a></li>
+                <li><a href="sub.html">파워북샵</a></li>
+                <li><a href="sub.html">마이북샵</a></li>
+                <li><a href="sub.html">마이페이지</a></li>
             </ul>
         </div>
     </div>
@@ -80,52 +80,52 @@
             <li>
                 <div class="menu1-1">
                     <ul>
-                        <li><a href="#">실시간 등록도서</a></li>
-                        <li><a href="#">고등학교서적</a></li>
-                        <li><a href="#">수험서,자격증,취업</a></li>
-                        <li><a href="#">외국도서,원서</a></li>
-                        <li><a href="#">잡지</a></li>
-                        <li><a href="#">총류,사전,전집</a></li>
+                        <li><a href="sub.html">실시간 등록도서</a></li>
+                        <li><a href="sub.html">고등학교서적</a></li>
+                        <li><a href="sub.html">수험서,자격증,취업</a></li>
+                        <li><a href="sub.html">외국도서,원서</a></li>
+                        <li><a href="sub.html">잡지</a></li>
+                        <li><a href="sub.html">총류,사전,전집</a></li>
                     </ul>
                 </div>
                 <div class="menu1-2">
                     <ul>
-                        <li><a href="#">소설</a></li>
-                        <li><a href="#">중학교서적</a></li>
-                        <li><a href="#">종교</a></li>
-                        <li><a href="#">컴퓨터</a></li>
-                        <li><a href="#">취미</a></li>
-                        <li><a href="#">역사,문화</a></li>
+                        <li><a href="sub.html">소설</a></li>
+                        <li><a href="sub.html">중학교서적</a></li>
+                        <li><a href="sub.html">종교</a></li>
+                        <li><a href="sub.html">컴퓨터</a></li>
+                        <li><a href="sub.html">취미</a></li>
+                        <li><a href="sub.html">역사,문화</a></li>
                     </ul>
                 </div>
                 <div class="menu1-3">
                     <ul>
-                        <li><a href="#">문학,인물</a></li>
-                        <li><a href="#">대학전공서적</a></li>
-                        <li><a href="#">경영,경제</a></li>
-                        <li><a href="#">전문서적</a></li>
-                        <li><a href="#">만화</a></li>
-                        <li><a href="#">청소년</a></li>
+                        <li><a href="sub.html">문학,인물</a></li>
+                        <li><a href="sub.html">대학전공서적</a></li>
+                        <li><a href="sub.html">경영,경제</a></li>
+                        <li><a href="sub.html">전문서적</a></li>
+                        <li><a href="sub.html">만화</a></li>
+                        <li><a href="sub.html">청소년</a></li>
                     </ul>
                 </div>
                 <div class="menu1-4">
                     <ul>
-                        <li><a href="#">아동,초등</a></li>
-                        <li><a href="#">역사,철학,심리,교육</a></li>
-                        <li><a href="#">자기계발</a></li>
-                        <li><a href="#">사전,전집</a></li>
-                        <li><a href="#">영화,음반</a></li>
-                        <li><a href="#">성인</a></li>
+                        <li><a href="sub.html">아동,초등</a></li>
+                        <li><a href="sub.html">역사,철학,심리,교육</a></li>
+                        <li><a href="sub.html">자기계발</a></li>
+                        <li><a href="sub.html">사전,전집</a></li>
+                        <li><a href="sub.html">영화,음반</a></li>
+                        <li><a href="sub.html">성인</a></li>
                     </ul>
                 </div>
                 <div class="menu1-5">
                     <ul>
-                        <li><a href="#">유아</a></li>
-                        <li><a href="#">사회,정치,법,과학</a></li>
-                        <li><a href="#">외국어</a></li>
-                        <li><a href="#">고서,희귀본</a></li>
-                        <li><a href="#">가정,건강</a></li>
-                        <li><a href="#">기타</a></li>
+                        <li><a href="sub.html">유아</a></li>
+                        <li><a href="sub.html">사회,정치,법,과학</a></li>
+                        <li><a href="sub.html">외국어</a></li>
+                        <li><a href="sub.html">고서,희귀본</a></li>
+                        <li><a href="sub.html">가정,건강</a></li>
+                        <li><a href="sub.html">기타</a></li>
                     </ul>
                 </div>
             </li>
@@ -134,10 +134,10 @@
 
     <div class="slide">
         <ul class="slide_img">
-            <li><a href="#"><img src="img/slide1.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/slide2.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/slide3.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/slide4.jpg" alt=""></a></li>
+            <li><a href="sub.html"><img src="img/slide1.jpg" alt=""></a></li>
+            <li><a href="sub.html"><img src="img/slide2.jpg" alt=""></a></li>
+            <li><a href="sub.html"><img src="img/slide3.jpg" alt=""></a></li>
+            <li><a href="sub.html"><img src="img/slide4.jpg" alt=""></a></li>
         </ul>
         <img src="img/48-px-left.png" alt="" class="left">
         <img src="img/48-px-right.png" alt="" class="right">
@@ -146,69 +146,69 @@
         <div class="book1">
             <div class="book1_3">
                 <h2>실시간 등록도서</h2>
-                <a href="#">더보기</a>
+                <a href="sub.html">더보기</a>
             </div>
     
             <div class="book1_1">
                 <ul class="book1_2">
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
-                    <li><a href="#"></a>
+                    <li><a href="sub.html"></a>
                         <div class="text_box"></div>
                     </li>
                 </ul>
@@ -227,24 +227,24 @@
                     <span>북코아 셀러가 추천하는 중고 BEST상품</span>
                 </div>
                 <ul class="book2_2_1">
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
-                    <li><a href="#"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
+                    <li><a href="sub.html"></a><div class="text_box2"></div></li>
                 </ul>
             </div>
             <div class="book2_3">
                 <div class="title2">
                     <h1>파워북샵</h1>
-                    <a href="#">더보기</a>
+                    <a href="sub.html">더보기</a>
                 </div>
                 <div class="powerbook">
                     <div class="br">
@@ -295,19 +295,19 @@
         <div class="book3_2">
             <div class="notice">
                 <h3>공지사항</h3>
-                <a href="#">더보기</a>
+                <a href="sub.html">더보기</a>
             </div>
             <div class="notice2">
                 <div class="notice3">
-                    <a href="#">명절 고객센터 연휴 안내</a>
+                    <a href="sub.html">명절 고객센터 연휴 안내</a>
                     <p>2022.01.26</p>
                 </div>
                 <div class="notice3">
-                    <a href="#">💖🤞 북코아 리뷰를 부탁해! [참여자 100% 전원증정] (~1/31)</a>
+                    <a href="sub.html">💖🤞 북코아 리뷰를 부탁해! [참여자 100% 전원증정] (~1/31)</a>
                     <p>2022.01.04</p>
                 </div>
                 <div class="notice3">
-                    <a href="#">🚨최대 30만원 페이백_"도전! 북코아 판매왕을 잡아라!" (~1/31)</a>
+                    <a href="sub.html">🚨최대 30만원 페이백_"도전! 북코아 판매왕을 잡아라!" (~1/31)</a>
                     <p>2022.01.03</p>
                 </div>
             </div>
@@ -320,11 +320,11 @@
                 <ul >
                     <li>회사정보</li>
                     <li class="line1"></li>
-                    <li><a href="#">개인정보취급방침</a></li>
+                    <li><a href="sub.html">개인정보취급방침</a></li>
                     <li class="line1"></li>
-                    <li><a href="#">이용약관</a></li>
+                    <li><a href="sub.html">이용약관</a></li>
                     <li class="line1"></li>
-                    <li><a href="#">고객센터</a></li>
+                    <li><a href="sub.html">고객센터</a></li>
                 </ul>
                 <p>
                     Copyright(c) 2021 ㈜ 시퀀스엔. All Rights Reserved [사업자정보] 대표전화 : 1544 -2949 | 대표(CEO) : 양종선 | 개인정보 보호책임자 : 양종선 사업자등록번<br>
