--- a/sub.html
+++ b/sub.html
@@ -183,7 +183,14 @@
             <div class="section2_2_1"><h2>책소개</h2></div>
             <div class="section2_2_2"></div>
         </div>
-        <div class="section2_3"></div>
+        <div class="section2_3">
+            <div class="section2_3_1">
+                <div class="section2_3_1_1"><h2>판매자</h2></div>
+                <div class="section2_3_1_2">
+                    <a href="" class="bookkorea">북코리아</a>
+                </div>
+            </div>
+        </div>
         <div class="section2_4"></div>
     </div>
 
