--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="menubar">
         <div class="menu">
             <ul class="menu1">
-                <a class="meall" href="sub.html">전체분류보기</a>
+                <li><a class="meall" href="sub.html">전체분류보기</a></li>
             </ul>
             <ul class="menu2">
                 <li><a href="sub.html">도서정보</a></li>
